simplify group indexing arrangements

--- a/cut-object.html
+++ b/cut-object.html
@@ -2,24 +2,40 @@
 CUSTOM ELEMENT: cut-object
 BY: DM
 
-This is similar to rm-plots and friends, except that this element is not intended to be a singleton inside 
-a tile-wall element.  Instead, there can be many cut-object elements, one for each cut the user has loaded.
+This doesn't have to be a singleton (I hope).
 
-The similarity with rm-plots is becuase the "groups" array of the tilewall should be bound
-to this element's "groups" property.  Each element of the groups array has an inds value which
-is an id for use with typed-array-manager.  This element provides various methods for splicing
-and dicing the cut, with each action modifying one or more of the inds values in the groups array.
+The main property is the "groups" array.  You don't splice and dice it directly, instead you use one of the following:
+    init_cut, swap_groups, merge_groups, split_groups, undo, redo
 
-It also provides a pair of arrays called undo_stack and redo_stack.  They contain deltas, which
-(may) include id's for use with typed-array-manager.
+Each element is an object, which contains an .inds property, which is a typed-array manager id for the array of
+indices that the object represents.  This id and the indices data never changes during the lifetime of the object.
 
-The groups array is a list of "boxes", where each box is born with an immutable array of spike indices,
-held as .inds on the box.  If the group's inds need to change, we replace the entire box at that location
-in the groups list.  This change is emmited as though it were a splice, so interested parties can pick up
-on the old box as well as the new box.  Also, sometimes boxes are moved around, i.e. they are spliced out
-of one place and into another place.  Interested parties should check whether a box is being removed entirely
-or just being moved, before deciding to garbage collect property within that box.  This is possible because
-such double splicing are done "atomically", i.e. only one notification is issued.
+The rendering modules listen for changes to the groups array and provide/update properties with names
+like .spa_rm_canvas, and .dir_rm_canvas.
+
+The groups array is backed by a Polymer.Collection.  This means that each object has a unique key associated
+to it, and these keys are valid for the lifetime of the object (well so long as the objected enver leaves
+and re-enters the array, which it shoudln't if you only use the special methods listed above).  Note that both
+the key and the inds property are unique to the object, but they are distinct - one is used by typed-array-manager
+and one is used by Polymer.Collection.
+
+See tac-plots for a reltaively simple example of how the comings and going of keys can be tracked.  Note how
+the tac-plots has a private worker and that it uses the keys when "discussing" indices with the worker.  This
+makes life very easy, because when the worker returns a rendered result with a key, you can simply lookup the
+associated object in the collection, and then provide the lovely new canvas.  tac-plots also maintains a
+couple of private maps which use the key as their key (isn't that wonderful?!).  These maps record the last
+rendered canvas produced by the woker for the given group, and the settings used to produce that canvas.  
+A slight complication is that when the groups array is switched entirely e.g. because a new cut is hooked up to
+the tilewall (or maybe beause internally the cut obj decides to assign a new array) the old key's suddenly cease
+to be unique.  But at that point we want the plotting code to discard the old ararys completely anyway.  So, we
+use the concept of "generation", which is a counter that increments by one each time a new cut array is encountered
+to the plotting machinery.  This generation value is passed to the worker with each list of key changes, and then
+passed back to the main thread with each delivery of rendered plots.  In other words you  could think of the keys
+as being qualified by this generation value, ie. they are really unique_val: "generation.key", but remembering that
+we only ever care about one generation at any one time.
+
+A very similar arrangement is used for rm-plots, though things are slightly more complex there.  waves-plots
+doesn't have a worker, but it uses a similar system.
 
 -->
 
@@ -315,6 +331,7 @@ such double splicing are done "atomically", i.e. only one notification is issued
         init_cut: function(cut_file, n_spikes){
             var m = window.typed_array_manager;
             this.set('redo_stack', []);
+            
             if(cut_file){
                 cut_file = m.get_array(cut_file);
 
@@ -341,6 +358,7 @@ such double splicing are done "atomically", i.e. only one notification is issued
                     }else{
                         boxes.push({});
                     }
+
                 }
                 this.undo_stack = [{
                     action: 'load'
@@ -350,12 +368,12 @@ such double splicing are done "atomically", i.e. only one notification is issued
 
             } else {
                 // no cut_file, so just make a zero-group with inds 0:n 
-                this.undo_stack =  [{
+                this.undo_stack = [{
                     action: 'create'
                 }];
                 this.set('undo_stack_descriptions', ['create blank cut']);
                 this.set('groups', [{
-                    inds:  m.store_array(arange(n_spikes))
+                    inds: m.store_array(arange(n_spikes))
                 }]);
             }
         }
