--- a/undo-stack-view.html
+++ b/undo-stack-view.html
@@ -26,6 +26,7 @@ color: #ccc;
         <template is="dom-repeat" items="[[redo_stack]]">
             <div class="redo">[[item]]</div>
         </template>
+        TODO: reverse the order of the undo stack...
         <template is="dom-repeat" items="[[undo_stack]]" >
             <div class="undo">[[item]]</div>
         </template>
