--- a/tac-plots.html
+++ b/tac-plots.html
@@ -2,34 +2,28 @@
 CUSTOM ELEMENT: tac-plots
 BY: DM
 
-Note: the variable prefix "taid" means typed-array-manager id.  "groups_idx" means the (scalar) index in the "groups"
-array, i.e. which on-screen cut-group are we talking about?  The actual indices into the spike data are refered to
-less consistently, in the worker they are stored in taid_to_array.
-
 This is designed to be used inside a tile-wall element.  The "groups" array of the tilewall should be bound
 to this element's "groups" property.  Then whenever the tilewall's groups array is spliced this element will
 be notified and can update ratemaps acordingly, with the tilewall be notified of the updates.
 
-The main thread maintains a private map, "rendered_canvases", which maps from group.inds (a typed-array-manager id) 
-to canvas and render settings.  The worker independantly keeps an analgous map, that includes only render settings 
-(not the canvases).  The two maps are kept in sync by virtue of a strict agreement on mutation logic: whenever the 
-worker sends an id+canvas+settings unit to the main thread it must store the unit, displacing anything that previously 
-existed for the given id.  Whenever the settings change, the main thread informs the worker, and they can then both 
-independently check which id's need to have new canvases generated (some may already have the correct render settings 
-if the user has gone back and forth fast enough).  Note that the two maps may not be in sync at a specific moment in time,
-but the chronological "narative" of changes to the map and changes to the settings will be the same on both threads, and
-this is sufficient.
-When the main thread is informed that some group.inds are no longer required, it sends a message to the worker thread to
-free them.
-The main thread also maintains a map from groups index into its rendered_canvases map. This is needed for looking up where
-to send canvases as they come back from the worker, it's also needed for working out what taids to delete when a specific 
-group gets a new inds taid.
+See cut-obj for a fairly detailed introduction to how the groups array works, and how keys are used here for
+main-worker thread communication and more.  Both threads maintain a pair of maps, on the worker thread 
+these maps are called:
+    key_to_rendered_options and key_to_array
+and on the main thread they are called:
+    key_to_rendered_options and key_to_canvas
+
+The worker thread independently decides which arrays need to be rendered, as new arrays arrive and settings
+are changed etc.  The main thread must keep the most recently rendered version for each array (and a record
+of the settings used for the render), otherwise in future it may end up wanting something which the worker
+thought it had already delivered.
 
 -->
 
 
 <link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="worker-builder.html">
+<link rel="import" href="utils.html">
 
 <dom-module id="tac-plots">
 
@@ -41,45 +35,63 @@ var render_options = {
     n_bins: 100
 };
 var spike_times;
-var taid_to_array = {}; // Note that in the worker, taid's are used only for arrays of spike-indices.
-var taid_to_rendered_options = {}; 
-var taids_pending_render = [];
+var key_to_array = {}; // Note that in the worker, key's are used only for arrays of spike-indices.
+var key_to_rendered_options = {}; 
+var keys_pending_render = [];
 var timer;
+var key_generation = 0;
 
-var set_max_delta_t = function(v){
-    render_options.max_delta_t = v;
-    taids_pending_render = [];    
+var set_options = function(opts){
+    for(var k in render_options){
+        render_options[k] = opts[k] === undefined ? render_options[k] : opts[k];
+    }
+    keys_pending_render = [];    
     if(spike_times){
-        for(var taid in taid_to_array) if(taid_to_array.hasOwnProperty(taid))
-            taids_pending_render.push(taid);
+        for(var key in key_to_array){
+            keys_pending_render.push(key);
+        }
     }
     toggle_timer();
 }
 
 var set_spike_times = function(arrays){
     spike_times = arrays.spike_times; 
-    taids_pending_render = [];    
+    keys_pending_render = [];    
     if(spike_times){
-        for(var taid in taid_to_array) if(taid_to_array.hasOwnProperty(taid))
-            taids_pending_render.push(taid);
+        for(var key in key_to_array){
+            keys_pending_render.push(key);
+        }
     }
     toggle_timer();
 }
 
-var update_taids = function(changes, arrays){
-    // both add_taids and remove_taids are arrays of ta-maanger ids
-    // the actual arrays for add_taids are in the arrays map.
+var update_keys = function(changes, arrays){
 
-    var remove_taids = changes.remove || [];
-    for(var ii=0; ii<remove_taids.length; ii++){
-        delete taid_to_array[remove_taids[ii]];
-        delete taid_to_rendered_options[remove_taids[ii]];
+    if(changes.generation_remove !== key_generation)
+        throw "key generation mismatch";
+
+    // note we don't both to remove keys from the pending list
+    // unless we change key generation, in which case we drop 
+    // everything that's pending. This is ensures that when we
+    // attempt a render we can be sure that if we do find the
+    // array for the given key we know it's for the relevant 
+    // generation and that it's still wanted.
+
+    var remove_keys = changes.remove || [];
+    for(var ii=0; ii<remove_keys.length; ii++){
+        delete key_to_array[remove_keys[ii]];
+        delete key_to_rendered_options[remove_keys[ii]];
     }
 
-    var add_taids = changes.add || [];
-    for(var ii=0; ii<add_taids.length; ii++){
-        taid_to_array[add_taids[ii]] = arrays[add_taids[ii]];
-        taids_pending_render.push(add_taids[ii]);
+    if(changes.generation_add !== changes.generation_remove){
+        keys_pending_render = [];
+        key_generation = changes.generation_add;
+    }
+
+    var add_keys = changes.add || [];
+    for(var ii=0; ii<add_keys.length; ii++){
+        key_to_array[add_keys[ii]] = arrays[add_keys[ii]];
+        keys_pending_render.push(add_keys[ii]);
     }
 
     toggle_timer();        
@@ -90,7 +102,7 @@ var toggle_timer = function(){
     // note it's not actually a timer, because the interval is zero!
     // the point of using this is that it enables messages from main thread to interupt
     // between ticks, we can thus cancel work as an when needed.
-    if(spike_times && taids_pending_render.length)
+    if(spike_times && keys_pending_render.length)
         timer = timer || setImmediate(timer_tick);
     else
         clearImmediate(timer);
@@ -98,28 +110,34 @@ var toggle_timer = function(){
 
 var timer_tick = function(){
     timer = 0;
-    var taid = taids_pending_render.pop();
-    
-    if(taid && taid_to_array[taid] && !is_equal_simple(taid_to_rendered_options[taid], render_options))
-        get_group_hist(taid);
+
+    // find one valid thing to render...
+    while(keys_pending_render.length > 0){
+        var key = keys_pending_render.pop();
+        if(key && key_to_array[key] && !is_equal_simple(key_to_rendered_options[key], render_options)){
+            get_group_hist(key);
+            break;
+        }
+    }
 
     toggle_timer();
 }
 
-var get_group_hist = function(taid){
+var get_group_hist = function(key){
     // note desired_max_delta_t and spike_times should both be in the same units
-    var group_times = pick(spike_times, taid_to_array[taid]);
+    var group_times = pick(spike_times, key_to_array[key]);
 
     // build pairwise-diff histogram
     var ret = new Uint32Array(render_options.n_bins+1);
     get_group_hist_sub(ret, group_times, render_options.max_delta_t, 
                         render_options.max_delta_t/render_options.n_bins);
  
-    taid_to_rendered_options[taid] = clone_simple(render_options);
+    key_to_rendered_options[key] = clone_simple(render_options);
     exec_main_b('plot_hist', {
-        taid: taid,
+        key: key,
+        generation: key_generation,
         hist_name: 'hist',
-        render_options: taid_to_rendered_options[taid]
+        render_options: key_to_rendered_options[key]
     }, {hist: ret});
 }
 
@@ -153,10 +171,10 @@ var is_equal_simple = function(a, b){
     // very simple....
     if((a && !b) || (!a && b))
         return false;
-    for(var aa in a) if(a.hasOwnProperty(aa))
+    for(var aa in a)
         if(b[aa] !== a[aa])
             return false;
-    for(var bb in b) if(b.hasOwnProperty(bb))
+    for(var bb in b)
         if(b[bb] !== a[bb])
             return false;
     return true;
@@ -169,6 +187,7 @@ var is_equal_simple = function(a, b){
 <script>
 	"use strict";
 
+
     Polymer({
     	is:'tac-plots',
     	properties: {
@@ -177,8 +196,12 @@ var is_equal_simple = function(a, b){
 				value: 2
 			},
             spike_times: {
-                type: String, // taid
+                type: String, // key
                 value: ""
+            },
+            show: {
+                type: String, // "y" or "n" (to match other modules which have multiple toggle-able things)
+                value: "y"
             },
 			groups: {
     			type: Array,
@@ -187,58 +210,83 @@ var is_equal_simple = function(a, b){
     		}
     	},
     	observers: [
-    		'groups_modified(groups.*)', 
-            'options_modified(max_delta_t)',
-            'times_modified(spike_times)'
+    		'_groups_set(groups)',
+            '_groups_spliced(groups.splices)', 
+            '_options_modified(max_delta_t)',
+            '_times_modified(spike_times)',
+            '_show_changed(show)'
     	],
-        attached: function(){
+        created: function(){
             var worker_builder = Polymer.DomModule.import('tac-plots','#worker');
             this.worker = worker_builder.create_for(this);
-            this.worker.exec('set_max_delta_t', this.max_delta_t);
-            this.taid_to_canvas = {};
-            this.taid_to_rendered_options = {};
-            this.taid_to_groups_idx = {};
+            this.key_to_canvas = {};
+            this.key_to_rendered_options = {};
+            this.key_is_on_worker = {};
+            this.key_generation = 0;
         },
-    	groups_modified: function(change){
-            if(!this.worker || !change || !change.value) return;
-            var taids_to_remove = [];
-            var taids_to_add = [];
-            var arrays = {};
-            var m = window.typed_array_manager;
+         _update_keys: function(keys_to_remove, keys_to_add, generation_remove, generation_add){
+            var am = window.typed_array_manager;
+            var cm = window.canvas_manager;
 
-            if(change.path === 'groups.splices')
-                change.value.indexSplices.forEach(function(s){
-        			s.removed.forEach(function(group){
-                        if(group.inds){
-                            delete this.taid_to_canvas[group.inds];
-                            delete this.taid_to_rendered_options[group.inds];
-                            delete this.taid_to_groups_idx[group.inds];
-                            taids_to_remove.push(group.inds);
-                        }
-        				if(group.tac){
-    	    				m.free_canvas(group.tac);
-                        }
-        			}, this);
+            var added_arrays = {};
+            if (this.show === 'y'){
+                // get clones of new arrays to send to worker
+                for(var ii=0; ii<keys_to_add.length; ii++){
+                    var key = keys_to_add[ii];
+                    var taid = this.groups_collection.getItem(key).inds;
+                    added_arrays[key] = am.get_array_clone(taid);
+                    this.key_is_on_worker[key] = true;
+                }
+            } else {
+                // if we are not showing the plot, we don't actually get 
+                // any arrays, but we need to remmeber that we never sent them
+                // to the worker.
+                for(var ii=0; ii<keys_to_add.length; ii++){
+                    this.key_is_on_worker[key] = false;
+                }
+                keys_to_add = [];
+            }
 
-        			for(var ii=s.index, stop = s.index+s.addedCount; ii<stop; ii++){
-        				var group = this.groups[ii];
-                        var arr = m.get_array_clone(group.inds);
-                        arrays[group.inds] = arr;
-                        taids_to_add.push(group.inds);
-        			}
-        		}, this);
+            // inform worker of the new/deleted arrays
+            this.worker.exec_b('update_keys', {
+                add: keys_to_add,
+                remove: keys_to_remove,
+                generation_remove: generation_remove,
+                generation_add: generation_add
+            }, added_arrays);
 
-            this.worker.exec_b('update_taids', {
-                add: taids_to_add,
-                remove: taids_to_remove
-            }, arrays);
-
-    	},
-        options_modified: function(){
-            if(!this.worker) return;
-            this.worker.exec('set_max_delta_t', this.max_delta_t);
+            // free canvases, it's our responsiblity to do this, whereas 
+            // freeing the inds arrays was the responsibility of cut-obj.
+            for(var ii=0; ii<keys_to_remove.length; ii++){
+                var key = keys_to_remove[ii];
+                var canvas = this.key_to_canvas[key];
+                if(canvas){
+                    cm.free_canvas(canvas);
+                }
+                delete this.key_to_canvas[key];
+                delete this.key_to_rendered_options[key];
+                delete this.key_is_on_worker[key]; // we can also forget this
+            }
         },
-        times_modified: function(){
+        _groups_set: function(new_val, old_val){
+            var removed = this.groups_collection ? 
+                            this.groups_collection.getKeys() : []; 
+            this.groups_collection = Array.isArray(new_val) && Polymer.Collection.get(new_val);
+            var added = this.groups_collection ? 
+                            this.groups_collection.getKeys() : []; 
+            this._update_keys(removed, added, this.key_generation, ++this.key_generation); // added keys are for a new generation
+        },
+        _groups_spliced: function(splices){
+            if(!splices) return;
+            var dedupes = Utils.dedupe(splices.keySplices);
+            this._update_keys(dedupes.removed, dedupes.added, this.key_generation, this.key_generation);
+        },
+        _options_modified: function(){
+            this.worker.exec('set_options', {
+                max_delta_t: this.max_delta_t
+            });
+        },
+        _times_modified: function(){
             if(this.spike_times){
                 var arr = window.typed_array_manager.get_array_clone(this.spike_times);
                 this.worker.exec_b('set_spike_times', {spike_times: arr});
@@ -247,14 +295,26 @@ var is_equal_simple = function(a, b){
                 this.worker.exec('set_spike_times', {});
             }
         },
+        _show_changed: function(){
+            if(this.show === 'y'){
+                var added = Object.keys(this.key_is_on_worker).filter(function(k){
+                    return !this.key_is_on_worker[k];
+                }, this);
+                this._update_keys([], added, this.key_generation, this.key_generation);
+            } else if (this.show === 'n'){
+                // nothing to do here
+            } else {
+                throw "invalid value for show";
+            }
+        },
         plot_hist: function(data, arrays) {
-            // data.taid
-            // hist = arrays[data.hist_name]
-            // data.render_options
-            console.log("plot_hist for: " + data.taid + "   " + JSON.stringify(data.render_options));
+            if(data.generation !== this.key_generation)
+                return; // pft! get with the times, dude.
+            var group = this.groups_collection.getItem(data.key);
+            // TODO: actually make the histogram, store it and settings locally and set on group
+            //group.tac =  m.create_from_dims([128,30]);
+            console.log("plot_hist for: " + data.key + "   " + JSON.stringify(data.render_options));
             console.dir(arrays[data.hist_name]);
-            // TODO: actually do this properly...
-            //group.tac = m.create_from_dims([128,30]);
         }
 
 	});
