fleshing out wave-plots

--- a/rm-plots.html
+++ b/rm-plots.html
@@ -16,6 +16,13 @@ be considered invalidated, this might be 'pos_xy', or 'cm_per_spa_bin', etc.
 
 Thirdly, there's just more inputs to the calculation, so there's more to keep track of.
 
+
+TODO: deal with show's impact on tick, and send data back to main. Also deal with limits
+  of xy ratemap...and possibly some other stuff too.
+
+And..
+
+TODO: produce spike pos plots on demand
 -->
 
 
