--- a/tile-wall.html
+++ b/tile-wall.html
@@ -118,9 +118,9 @@ groups is an array of objects with the following properties:
                 type: Object,
                 value: function(){ return {};} // data (taid), timebase
             },
-            voltages_for_gl: {
-                type: String,
-                value: "" // typed-array-manager id
+            data_for_gl: {
+                type: Object,
+                value: function(){return {};} // has n value and typed-array-manager id for gl voltages
             },
             options: {
             	type: Object,
